#### 可定制列表格 1. 修复列定制时，包含 template 的 table-column 渲染异常问题 2. 重写表格部分区域高度计算方式 3. 完善表格重绘时高度计算

--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -15,6 +15,11 @@ html, body {
     font-size: 16px;
     background: #4A90E2;
   }
+  &.gm-scrollbar-container {
+    .el-table__body-wrapper {
+      overflow: scroll;
+    }
+  }
 }
 
 object.resize-trigger {
